RSTLKillOpThread has incorrect deadline when fassertOnLockTimeoutForStepUpDown = 0

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 9.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Replication
    • Fully Compatible
    • ALL
    • Repl 2026-04-27
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      BF-41628 found that if fassertOnLockTimeoutForStepUpDown = 0 (no timeout for RSTL acquisition), the new deadline introduced in SERVER-119490 and SERVER-117908 does not account for this case correctly and passes a deadline of Date_t::now() + 0, which causes the kill op thread to almost immediately time out.

      If this param is 0, we should pass Date_t::max(), which is the default deadline for all other usages of the kill op thread.

            Assignee:
            Ruchitha Rajaghatta
            Reporter:
            Ruchitha Rajaghatta
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: