SERVER-125022 RSTLKillOpThread has incorrect deadline when fassertOnLockTimeoutForStepUpDown = 0 (#52400)

GitOrigin-RevId: 5966504b03cd35fe947a74dc0bd8a16f4e09d5cc